--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,25 @@
 	    <version>2.7</version>
 	</dependency>
 <!-- https://mvnrepository.com/artifact/org.testing/testng  -->
-    <dependency>
+  <!--  <dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>6.8</version>
+	    <scope>test</scope>
+	</dependency>-->
+	
+	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>6.8</version>
 	    <scope>test</scope>
 	</dependency>
+
+	
+	
+	
+	
+	
 
 <!--	<dependency>
 		<groupId>com.project.staragile</groupId>
